# piqtree

./: .gitignore  .gitmodules  .readthedocs.yaml  MANIFEST.in  README.md  bench_iq_times.csv  changelog.md  for_windows.md  free.patch  instructions.md  mkdocs.yml  my_protein.fasta  noxfile.py  pyproject.toml  rtd_get_docs.py  setup.py  times.txt  tmp.py
.devcontainer/: DockerFile  devcontainer.json
.github/actions/build-iqtree/: action.yml
.github/actions/setup-piqtree/: action.yml
.github/workflows/: add_source_to_release.yml  build_container.yml  build_docs.yml  build_wheels.yml  build_windows.yml  ci.yml  release.yml
benchmark_data/: bench_iq_results.csv  bench_piq_results.csv  bench_piq_times.csv  benchmark.py  summarise.py
bridge/: bridge.cpp  bridge.exp  bridge.h
build_tools/: before_all_mac.sh  before_all_windows.sh  build_iqtree.sh  cibw_test_wrapper.py
changelog.d/: 20250509_162840_robert.mcarthur.md  20250521_122741_robert.mcarthur_windows_support.md  20250522_113423_robert.mcarthur_nj_tree_nans.md  20250612_154808_robert.mcarthur_random_tree.md  20250618_111314_robert.mcarthur_iqtree3.md  20250619_163158_robert.mcarthur_new_model.md  20250620_112421_robert.mcarthur_new_models.md  20250620_112539_robert.mcarthur_add_sources.md  20250623_134039_robert.mcarthur_consensus_tree.md  20250623_230533_robert.mcarthur_fit_remove_seed.md  20250625_114914_robert.mcarthur_consensus_app.md  20250701_171457_robert.mcarthur_parameterise_models.md  20250702_161144_robert.mcarthur_rename_apps.md  20250710_142319_robert.mcarthur_parameterise_models.md  20250714_082310_Gavin.Huttley.md  20250927_162333_robert.mcarthur_v0_7.md
docs/: index.md
docs/api/: index.md
docs/api/alignment/: simulate_alignment.md
docs/api/model/: FreqType.md  SubstitutionModel.md
docs/api/tree/: consensus_tree.md  random_tree.md
docs/apps/: app_pipeline.py  available_help.py  fit_tree.py  index.md  model_finder.py  nj.py  pairwise_dist.py  phylo.py
docs/developers/: contributing.md  environment_setup.md  index.md  iqtree_submodule.md  release.md  testing.md  troubleshooting.md
docs/quickstart/: available_frequency_options.py  available_rate_heterogeneity_options.py  available_submodels.py  calculate_jc_distances.md  calculate_rf_distances.md  construct_consensus_tree.md  construct_ml_tree.md  construct_nj_tree.md  fit_tree_topology.md  index.md  make_random_tree.md  simulate_alignment.md  using_model_finder.md  using_substitution_models.md
docs/scripts/: prepare_doc_test_data.py
j_libs/: tmp.txt
j_libs copy 2/: static_libs.txt
src/piqtree/: __init__.py  _cibw_check.py  _data.py
src/piqtree/_app/: __init__.py
src/piqtree/_libiqtree/: README.txt  _piqtree.cpp  _piqtree.h  bridge.def  bridge.lib
src/piqtree/_libiqtree_old/: bridge.lib
src/piqtree/distribution/: __init__.py  indel_distribution.py
src/piqtree/iqtree/: __init__.py  _alignment.py  _aln.py  _decorator.py  _jc_distance.py  _model_finder.py  _parse_tree_parameters.py  _random_tree.py  _robinson_foulds.py  _tree.py
src/piqtree/model/: __init__.py  _freq_type.py  _model.py  _options.py  _rate_type.py  _substitution_model.py
src/piqtree/util/: __init__.py
tests/: conftest.py  test_data.py
tests/data/: protein.fasta
tests/test_app/: test_app.py  test_pickle.py
tests/test_iqtree/: test_build_tree.py  test_consensus_tree.py  test_distance.py  test_fit_tree.py  test_model_finder.py  test_nj_tree.py  test_protein_build_tree.py  test_random_tree.py  test_random_trees.py  test_robinson_foulds.py  test_segmentation_fault.py  test_simulate_alignment.py  test_tree_yaml.py
tests/test_model/: test_freq_type.py  test_model.py  test_options.py  test_rate_type.py  test_substitution_model.py
tmp/: bridge.cpp  bridge.h  old_bridge.cpp  piqtree-0.4.0-cp312-cp312-win_amd64.whl
wheelhouse/: piqtree-0.4.0-cp312-cp312-win_amd64.whl
z_bridge/: bridge.cpp  bridge.h  libmain.txt
z_bridge/unnest_archive/: unnest_archive.py
zdef/: iqtree2.def
zrel_ver/: aln_200_6000.fasta
